fix(download-screenshot): Fix Download Screenshot issues on IE11

--- a/Packages/ohif-viewerbase/client/components/viewer/toolbarSectionTools/toolbarSectionTools.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/toolbarSectionTools/toolbarSectionTools.styl
@@ -29,7 +29,7 @@ $distance = 10px
     transition(opacity 0.3s ease\, transform 0.3s ease\, left 0.3s ease)
     transform(translateX(-50%) translateY( - ($toolbarDrawerHeight + $distance)) scale(0))
     white-space: nowrap
-    z-index: 1
+    z-index: 2
 
     .toolbarSectionDrawer
       theme('background', '$uiGrayDarkest', 0.95)
